[package]
name = "sudo_approve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
tokio = { version = "1.34.0", features = ["net", "io-util", "sync", "rt", "macros", "rt-multi-thread", "io-std", "time"]}
